# monocle-agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  release.yml
example-service/: Cargo.toml  README.md
example-service/src/: lib.rs  main.rs
example-service/tests/: integration.rs
examples/: axum_service.rs  worker.rs
src/: blocking.rs  config.rs  http.rs  lib.rs  metrics.rs  providers.rs
